--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,8 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+
         {
             "name": "Python: 当前文件",
             "type": "python",
@@ -16,7 +18,7 @@
             "name": "Python: manage.py",
             "type": "python",
             "request": "launch",
-            "program": "/root/sheng/Sheng_Django/manage.py",
+            "program": "/root/shengji/manage.py",
             "console": "integratedTerminal",
             "args": [
                 "runserver",
